# src/handler/openapigenmodel/go/model_customer_withoud_id.go
@@ -1,0 +1,45 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * Customer API
+ *
+ * API for customer management
+ *
+ * API version: 1.0.0
+ */
+
+package openapi
+
+
+import (
+	"time"
+)
+
+
+
+type CustomerWithoudId struct {
+
+	Name string `json:"name,omitempty"`
+
+	Address string `json:"address,omitempty"`
+
+	Zip string `json:"zip,omitempty"`
+
+	Phone string `json:"phone,omitempty"`
+
+	Mktsegment string `json:"mktsegment,omitempty"`
+
+	Nation string `json:"nation,omitempty"`
+
+	Birthdate time.Time `json:"birthdate,omitempty"`
+}
+
+// AssertCustomerWithoudIdRequired checks if the required fields are not zero-ed
+func AssertCustomerWithoudIdRequired(obj CustomerWithoudId) error {
+	return nil
+}
+
+// AssertCustomerWithoudIdConstraints checks if the values respects the defined constraints
+func AssertCustomerWithoudIdConstraints(obj CustomerWithoudId) error {
+	return nil
+}
